# 6502_Emulator

./: .gitignore  CMakeLists.txt  README.md
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  tLDA  tLDX  tLDY  tSTA
emu/: emu.cpp  emu.h  main.cpp  main.h
include/: bus.h  common.h  cpu_6502.h  emulator.h  mpu6502_cpu.h  mpu6502_interface.h  mpu6502_memory.h  mpu6502_types.h
include_old/: mpu6502_memory.h  mpu6502_types.h
src/: bus.cpp  cpu_6502.cpp  emulator.cpp  mpu6502_cpu  mpu6502_cpu.cpp  mpu6502_interface  mpu6502_interface.cpp  mpu6502_memory  mpu6502_memory.cpp
src_old/: mpu6502_cpu.cpp  mpu6502_interface  mpu6502_memory.cpp
tests/: CMakeLists.txt  TestExecutor  main.cpp  tArithmetic.cpp  tIncDec.cpp  tLDA.cpp  tLDX.cpp  tLDY.cpp  tLoad.cpp  tLogical.cpp  tSTA.cpp  tStack.cpp  tStatusFlags.cpp  tStore.cpp  tTransfer.cpp
tests/BaseTest/: BaseTest.cpp  BaseTest.h
tests/JumpTests/: tJumpTests  tJumpTests.cpp
tests/LDA/: tLDA  tLDA.cpp
tests/LDX/: tLDX.cpp
tests/LDY/: tLDY.cpp
tests/LoadTests/: tLoadAXYTests.cpp
tests/STA/: tSTA  tSTA.cpp
tests/STX/: tSTX.cpp
tests/STY/: tSTY.cpp
tests/StoreTests/: tStoreAXYTests.cpp
